--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const pages = await getCollection('page');
 							<circle cx="20" cy="20" r="19" stroke="currentColor" stroke-width="2"/>
 							<path d="M12 20C12 25 16 28 20 28C24 28 28 25 28 20C28 15 24 12 20 12" stroke="currentColor" stroke-width="2"/>
 						</svg>
-						<h1>Low Power</h1>
+						<h1>CelestiaCom</h1>
 					</a>
 				</div>
 				<div class="nav-right">
@@ -41,7 +41,7 @@ const pages = await getCollection('page');
 		</header>
 		<slot />
 		<footer>
-			<p>&copy; 2025 Low Power Blog. <a href="https://temaprint.com">t3ma</a> 🖤 <a href="https://astro.build/">Astro</a></p>
+			<p>&copy; CelestiaCom. <a href="https://github.com/CeliaChavezV">Celia</a>
 		</footer>
 	</body>
 </html>
